--- a/styles/main.scss
+++ b/styles/main.scss
@@ -207,6 +207,10 @@ button {
         display: inline-block;
     }
 
+    .dGrid {
+        display: grid;
+    }
+
     .visHidden {
         visibility: hidden;
         opacity: 0;
@@ -233,8 +237,9 @@ button {
         font-family: quatro, sans-serif;
         font-style: italic;
         font-weight: 900;
-        
-
+        font-size: 1.5rem;
+        margin-bottom: 0;
+            
     }
 
     .white {
@@ -279,10 +284,10 @@ button {
         color: #3c3634;
         border-radius: 25px;
         margin-left: -20px;
-        width: 55%;
-        padding-left: 2rem;
-        height: 5rem;
-        padding-top: 1.25rem;
+        width: 76%;
+        padding-left: 1.5rem;
+        height: 3rem;
+        padding-top: 0.75rem;
 
         p {
 
@@ -320,7 +325,7 @@ button {
     .helpUs {
 
         font-weight: 600;
-        font-size: 1.5rem;
+        font-size: 1.25rem;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -330,7 +335,7 @@ button {
     #wantToTry4 > a:hover > i {
 
         color: $brandYellow;
-        
+
     }
 
 
@@ -343,12 +348,10 @@ button {
 
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-
-    -ms-grid-rows: 10vh 10vh 10vh 10vh 10vh 10vh 10vh 10vh 10vh 10vh;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(10, 9.1vh);
+    grid-gap: 1vh;
       
-
 }
 
 
@@ -358,72 +361,16 @@ button {
   #goLandscape {
 
       display: none;
+
   }
 
-  /*      ///////////////   Go Full Screen   ////////////     */
 
 
-#fullScreen { 
-
-      -ms-grid-column: 9;
-      -ms-grid-column-span: 4;
-      grid-column: 9 / 13;
-      -ms-grid-row: 1;
-      -ms-grid-row-span: 2;
-      grid-row: 1 / 3;
-
-      z-index: 30;
-
-    a {
-
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-              align-items: center;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-              justify-content: center;
-
-        padding: 0 0 0 0;
-        /*margin: 1rem 1rem 0 0;*/
-        width: 100%;
-        height: 100%;
-
-        background-color: pink;
-          
-
-    }
-
-    h5 {
-        color: $brandBlue;
-        font-weight: 700;
-    }
-
-      
-}
 
 
   /* ////////////////   Navigation   ////////////// */
 
   #nav {
-
-/*    -ms-grid-column: 5;
-    -ms-grid-column-span: 4;
-    grid-column: 5 / 9;
-
-    -ms-grid-row: 10;
-    -ms-grid-row-span: 1;
-    grid-row: 9 / 10;
-
-    -webkit-box-align: end;
-    -ms-flex-align: end;
-    align-items: flex-end;
-
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;*/
 
     grid-column: 2 / 12;
     grid-row: 9 / 10; 
@@ -450,43 +397,17 @@ button {
 
     position: relative;
     color: $brandDarkBlue;
-
-        border-radius: 5px;
-       /* border-width: 0px 0px 3px 0px;*/
-       /* border-color: $brandDarkBlue;
-        border-style: solid;*/
-        background-color: $brandYellow;
-        height: 7.1vh;
-
-/*        width: 85%;
-        height: 63%;*/
-        font-size: 1.25rem;
-        padding: 0.5rem 2rem;
-
-
-/*    background-color: rgba(255,255,255,0.2);
     border-radius: 5px;
-    border: 1px solid white;*/
-
-
+    background-color: $brandYellow;
+    font-size: 0.75rem;
     font-weight: 600;
-/*    width: 1.5rem;
-    height: 1.5rem;*/
-
     margin: 0 .25rem;
-
-
-
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-
     transition: all 0.3s ease-out;
-
+    height: 100%;
+    padding: 0.75rem;
+    line-height: 0.75rem
 
   }
 
@@ -494,24 +415,11 @@ button {
 
     color: $brandBlue;
     background-color: white;
-/*    border: 1px solid white;*/
-
-        border-radius: 5px;
-        /*border-width: 0px 0px 3px 0px;*/
-        /*border-color: $brandDarkBlue;
-        border-style: solid;*/
-
-
+    border-radius: 5px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
 
   }
@@ -520,11 +428,7 @@ button {
 
     color: $brandBlue;
     background-color: white;
-        border-radius: 5px;
-        /*border-width: 0px 0px 3px 0px;*/
-        /*border-color: $brandDarkBlue;
-        border-style: solid;*/
-/*    margin: 0 .1rem;*/
+    border-radius: 5px;
 
   }
 
@@ -1012,6 +916,17 @@ canvas {
 
 }
 
+#mobileControls {
+
+    grid-column: 5 / 9;
+    grid-row: 6 / 10;
+    z-index: 70;
+    background-color: #d0c700;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+
+}
+
 #youStopped {
 
     grid-column: 4 / 10;
@@ -1114,7 +1029,7 @@ canvas {
     width: 100%;
     text-transform: uppercase;
     font-weight: 100;
-    font-size: 3rem;
+    font-size: 1rem;
     
 }
 
@@ -1123,12 +1038,12 @@ canvas {
 
     color: #293142;
     text-align: center;
-    margin: -3rem 0;
+    margin: -1rem 0;
     width: 100%;
     font-family:'quatro', sans-serif;
     text-transform: uppercase;
     font-style: italic;
-    font-size: 12rem;
+    font-size: 3rem;
     font-weight: 900;
 
 }
@@ -1175,35 +1090,25 @@ footer {
   /*   Page 2   */
 
   /* Content for Page 2 */
-  #wantToTry, #wantToTry4, #wantToTry5 {
-
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column;
-
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-              justify-content: center;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-              align-items: center;
+#wantToTry4 {
 
 
-      text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 
+    h1 {
+        margin-top: 1rem;
+        font-size: 1.75rem;
+        line-height: 1.75rem; 
+    }
 
-      h1 {
-          line-height: 2.25rem; 
-      }
+    h4 {
+        margin-bottom: 1.5rem;
+    }
 
-      h4 {
-
-          margin-bottom: 1.5rem;
-
-      }
-
-  }
+}
 
  
 
@@ -1343,15 +1248,6 @@ footer {
 
 /* Instructions */
 #instructions {
-/*
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 10;
-    grid-column: 2 / 10;
-
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 7;
-    grid-row: 1 / 8;*/
-
 
 
     z-index: 20;
@@ -1515,10 +1411,12 @@ footer {
 #stepsContent {
 
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
     justify-content: space-around;
     width: 100%;
-    margin: 5vh 0;
+    margin: 0;
+    padding: 0 5vh;
 
 }
 
@@ -1529,28 +1427,31 @@ footer {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    flex-direction: column;
-    width: 15vw;
-    min-height: 51vh;
+    flex-direction: row;
+    width: 100%;
+    height: 13vh;
     background-color: #d0c287;
     color: #3c3634;
     border-radius: 30px;
+    margin:0.125rem 0;
 
     img {
-        width: 120%;
+        width: 10%;
         margin-left: 20px;
     }
 
     h3 {
 
-        padding-top: 1rem;
+        padding-top: 0;
+        margin-bottom: 0;
 
     }
 
     p {
-        padding: 1rem;
+        padding: 0 0 0 0.5rem;
         padding-top: 0;
         text-align: center;
+        margin: 0;
     }
 
 
@@ -1603,11 +1504,7 @@ footer {
 
   /*   Page 4   */
 
-    #wantToTry4 {
 
-        padding: 0 4rem;
-
-    }
 
     .arrow {
 
@@ -1635,27 +1532,16 @@ footer {
 
   #share, #learn, #subscribe {
 
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
+
     flex-direction: column;
-
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
 
 
-
-
-      /*border: 1px solid white;*/
       position: relative;
       padding: 0.5rem;
       z-index: 20;
-      /*background-color: rgba(214, 234, 255, 0.5);*/
+
       text-align: center;
 
       hr {
@@ -1680,18 +1566,6 @@ footer {
 
   #logo {
 
-/*      -ms-grid-column: 6;
-      -ms-grid-column-span: 2;
-      grid-column: 6 / 8;
-      -ms-grid-row: 1;
-      -ms-grid-row-span: 1;
-      grid-row: 1 / 2;
-
-      width: 100%;
-      z-index: 20;
-
-      align-items: center;
-      justify-content: center;*/
 
       a {
           text-align: center;
@@ -1705,31 +1579,22 @@ footer {
 
   }
 
-/*  #share {
-      -ms-grid-column: 1;
-      -ms-grid-column-span: 4;
-      grid-column: 1 / 5;
-      -ms-grid-row: 2;
-      -ms-grid-row-span: 6;
-      grid-row: 2 / 8;
-  }
-*/
-  #subscribe {
-/*      -ms-grid-column: 5;
-      -ms-grid-column-span: 4;
+  #share {
+
       grid-column: 5 / 9;
-      -ms-grid-row: 2;
-      -ms-grid-row-span: 6;
-      grid-row: 2 / 8;*/
+      grid-row: 1 / 8;
+  }
+
+  #subscribe {
+
+      grid-column: 9 / 13;
+      grid-row: 1 / 8;
   }
 
   #learn {
-/*      -ms-grid-column: 9;
-      -ms-grid-column-span: 4;
-      grid-column: 9 / 13;
-      -ms-grid-row: 2;
-      -ms-grid-row-span: 6;
-      grid-row: 2 / 8;*/
+
+      grid-column: 1 / 5;
+      grid-row: 1 / 8;
   }
 
 
@@ -2157,33 +2022,16 @@ footer {
 
       #goLandscape {
 
-          -ms-grid-column: 1;
-          -ms-grid-column-span: 12;
-          grid-column: 1 / 13;
-          -ms-grid-row: 1;
-          -ms-grid-row-span: 9;
-          grid-row: 1 / 10;
 
+        grid-column: 1 / 13;
+        grid-row: 1 / 10;
+        background-color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 60;
 
-          margin: -1vh;
-          background-color: white;
-
-          display: -webkit-box;
-          display: -ms-flexbox;
-          display: flex;
-          -webkit-box-align: center;
-          -ms-flex-align: center;
-                  align-items: center;
-          -webkit-box-pack: center;
-          -ms-flex-pack: center;
-                  justify-content: center;
-          -webkit-box-orient: vertical;
-          -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-                  flex-direction: column;
-
-          
-          z-index: 60;
 
           h1 {
               color: black;
@@ -2202,19 +2050,17 @@ footer {
 
   }
 
-  @media only screen and (min-width: 500px) and (orientation: landscape) {
+@media only screen and (min-width: 500px) and (orientation: landscape) {
 
 
-      body {
-          font-size: 14px;
-      }
+    body {
 
-      #nav {
-        display: none;
-      }
+        font-size: 14px;
+    }
 
 
-  }
+
+}
 
 
 
@@ -2233,9 +2079,6 @@ footer {
 
       }
 
-      #nav {
-        display: none;
-      }
 
 
 
@@ -2244,16 +2087,8 @@ footer {
   @media only screen and (min-width: 800px) and (orientation: landscape) {
 
 
-      #wantToTry4 {
 
 
-          padding: 0 11rem;
-     
-      }
-
-      #nav {
-        display: none;
-      }
 
 
 
@@ -2273,20 +2108,96 @@ footer {
 
       }
 
-      #fullScreen { 
+  
 
-          grid-column: 11 / span 2;
-          grid-row: 1 / 2;
+    .navButton {
 
-      }
+        position: relative;
+        color: $brandDarkBlue;
+        border-radius: 5px;
+        background-color: $brandYellow;
+        width: 100%;
+        height: 7.1vh;
+        font-size: 1.25rem;
+        padding: 0.5rem 2rem;
+        font-weight: 600;
+        margin: 0 .25rem;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.3s ease-out;
+
+    }
+
+    .h1Instructions {
+
+        font-size: 5rem;
+        margin-bottom: inherit;
+            
+    }
+
+    #stepsContent {
+
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-around;
+        width: 100%;
+        margin: 5vh 0;
+
+    }
+
+    .stepsStyle {
+
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        flex-direction: column;
+        width: 15vw;
+        min-height: 51vh;
+        background-color: #d0c287;
+        color: #3c3634;
+        border-radius: 30px;
+
+        img {
+            width: 120%;
+            margin-left: 20px;
+        }
+
+        h3 {
+
+            padding-top: 1rem;
+
+        }
+
+        p {
+            padding: 1rem;
+            padding-top: 0;
+            text-align: center;
+        }
 
 
-      .navButton {
-          /*width: 2.25rem;*/
-          width: 100%;
-          /*height: 2.25rem;*/
-      }
+    }
 
+    .insDiv {
+
+        background-color: #d0c287;
+        color: #3c3634;
+        border-radius: 25px;
+        margin-left: -20px;
+        width: 55%;
+        padding-left: 2rem;
+        height: 5rem;
+        padding-top: 1.25rem;
+
+        p {
+
+            margin-left: 40px;
+            margin-top: 0.75rem;
+
+        }
+
+
+    }
 
 
       /* Photo of intersection */
@@ -2301,27 +2212,50 @@ footer {
 
 
       #logo {
+
           -ms-grid-column: 5;          
           -ms-grid-column-span: 4;          
           grid-column: 5 / 9;
-
           margin-top: 2rem;
+
       }
 
 
-      #wantToTry4 {
 
-          padding: 0 7rem;
-     
-      }
+    #wantToTry4 {
+
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 0 7rem;
+
+        h1 {
+            margin-top: initial;
+            font-size: initial;
+            line-height: 2.25rem; 
+        }
+
+        h4 {
+            font-size: initial;
+            margin-bottom: 1.5rem;
+        }
+
+    }
+
+    .helpUs {
+
+        font-size: 1.5rem;
+
+    }
 
       #subscribe, #share, #learn {
 
-          -ms-grid-row: 2;          
-          -ms-grid-row-span: 6;          
+         
           grid-row: 2 / 8;
-
           padding: 2rem;
+
+
       }
 
       #subscribe {
@@ -2434,20 +2368,28 @@ footer {
       }
 
       #nav {
+
         display: flex;
-      }
-
-
-
-  /*   ////////////////    Page 3    //////////////    */
-
-      #instructions {
-
-/*          -ms-grid-column: 2;          
-          -ms-grid-column-span: 10;          
-          grid-column: 2 / 10;*/
 
       }
+
+
+
+    #introTextSm {
+
+        font-size: 4rem;
+
+    }
+
+    #introTextLg {
+
+        font-size: 12rem;
+        margin: -3rem 0;
+
+    }
+
+
+
 
       .instructionCopy {
           margin: 0 .5rem;
@@ -2459,23 +2401,20 @@ footer {
       }
 
 
-  /*   ////////////////    Page 4    //////////////    */
+
       #wantToTry4 {
 
           h1 {
               line-height: initial;            
           }
 
-     
       }
 
 
-      /*   ///////////////   Page 6   //////////////   */
 
       #share, #learn, #subscribe {
 
           
-
           padding: 2rem;
 
               form {
@@ -2511,47 +2450,29 @@ footer {
                   
               }
 
-
-
-
       }
 
 
       #share {
-          -ms-grid-column: 5;
-          -ms-grid-column-span: 4;
+
           grid-column: 5 / 9;
-
-          -ms-grid-row: 2;          
-          -ms-grid-row-span: 3;          
           grid-row: 2 / 5;
-
           margin: 0 2vh;
         
       }
 
       #subscribe {
-          -ms-grid-column: 9;
-          -ms-grid-column-span: 4;
+
           grid-column: 9 / 13; 
-
-          -ms-grid-row: 2;          
-          -ms-grid-row-span: 6;          
           grid-row: 2 / 8;
-
           margin: 0 2vh;
          
       }
 
       #learn {
-          -ms-grid-column: 1;
-          -ms-grid-column-span: 5;
+
           grid-column: 1 / 5;
-
-          -ms-grid-row: 2;          
-          -ms-grid-row-span: 4;          
           grid-row: 2 / 6;
-
           margin: 0 2vh;
          
       }
@@ -2561,177 +2482,10 @@ footer {
   }
 
 
-/*   ////////////   Start Feature Query  ////////////   */
 
-@supports (grid-gap:0) {
 
 
 
-  .gridContainer {
-
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(10, 9.1vh);
-    grid-gap: 1vh;
-      
-  }
-
-/*  .gridContainer > * {
-
-      grid-column: 1 / span 12;
-
-  }*/
-
-
-
-
-  /*  ///  Go Full Screen  ///  */
-
-
-
-
-  #nav {
-
-/*      grid-column: 5 / span 4;
-      grid-row: 9 / 10;
-*/
-  }
-
-
-
-
-
-
-
-
-  /* Instructions */
-  #instructions {
-/*
-      grid-column: 2 / span 10;
-      grid-row: 1 / 8;*/
-
-  }
-
-
-  #logo {
-
-      grid-column: 6 / span 2;
-      grid-row: 1 / 2;
-
-  }
-
-/*  #share {
-      grid-column: 1 / span 4;
-      
-  }
-
-  #subscribe {
-      grid-column: 5 / span 4;
-      
-  }
-
-  #learn {
-      grid-column: 9 / span 4;
-      
-  }*/
-
-
-  #sorry {
-
-      grid-column: 3 / span 8;
-      grid-row: 1 / 10;
-
-  }
-
-
-
-
-
-
-
-
-
-
-
-
-/*   /////////////////////    MEDIA QUERIES    /////////////////////   */
-
-@media only screen and (max-width: 1024px) and (orientation: portrait) {
-
-
-
-  #goLandscape {
-
-      grid-column: 1 / span 12;
-      grid-row: 1 / 10;
-
-  }
-
-
-
-}
-
-
-
-  @media only screen and (min-width: 1000px) and (orientation: landscape) {
-
-
-      #logo {
-
-          grid-column: 5 / span 4;
-
-      }
-
-
-
-
-
-  }
-
-
-  @media only screen and (min-width: 1025px) and (orientation: landscape) {
-
-      #sorry {
-
-          grid-column: 4 / span 6;
-          grid-row: 2 / 9;
-
-
-      }
-
-
-  /*   ////////////////    Page 3    //////////////    */
-
-      #instructions {
-
-/*          grid-column: 2 / span 10;*/
-
-      }
-
-      /*   ///////////////   Page 6   //////////////   */
-
-
-/*      #share {
-          grid-column: 1 / span 4;
-        
-      }
-
-      #subscribe {
-          grid-column: 5 / span 4;
-         
-      }
-
-      #learn {
-          grid-column: 9 / span 4;
-         
-      }*/
-
-
-  }
-
-
-} 
-/*   //// End Feature Query ////  */
 
 
 
