--- a/styles/main.css
+++ b/styles/main.css
@@ -211,7 +211,6 @@ a:hover {
   grid-row: 9 / 10;
   z-index: 50;
   font-size: 1rem;
-  display: flex;
   align-items: flex-end;
   justify-content: center;
   padding: 0.5rem 2rem; }
@@ -1141,20 +1140,13 @@ footer {
 @media only screen and (min-width: 1000px) and (orientation: landscape) {
   button {
     padding: 0.5rem 5rem; }
+  /* ////////////////   Navigation   ////////////// */
   .navButton {
-    position: relative;
-    color: #293142;
-    border-radius: 5px;
-    background-color: #d0c700;
     width: 100%;
     height: 7.1vh;
     font-size: 1.25rem;
     padding: 0.5rem 2rem;
-    font-weight: 600;
-    margin: 0 .25rem;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.3s ease-out; }
+    margin: 0 .25rem; }
   .h1Instructions {
     font-size: 5rem;
     margin-bottom: inherit; }
@@ -1267,8 +1259,6 @@ footer {
   /* ////////////////   Navigation   ////////////// */
   #nav::before {
     width: 30%; }
-  #nav {
-    display: flex; }
   #introTextSm {
     font-size: 4rem; }
   #introTextLg {
