--- a/styles/main.scss
+++ b/styles/main.scss
@@ -377,8 +377,6 @@ button {
     z-index: 50; 
     font-size: 1rem;
 
-
-    display: flex;
     align-items: flex-end;
     justify-content: center;
 
@@ -2108,25 +2106,21 @@ footer {
 
       }
 
-  
+  /* ////////////////   Navigation   ////////////// */
+
+
 
     .navButton {
 
-        position: relative;
-        color: $brandDarkBlue;
-        border-radius: 5px;
-        background-color: $brandYellow;
         width: 100%;
         height: 7.1vh;
         font-size: 1.25rem;
         padding: 0.5rem 2rem;
-        font-weight: 600;
         margin: 0 .25rem;
-        align-items: center;
-        justify-content: center;
-        transition: all 0.3s ease-out;
 
     }
+
+
 
     .h1Instructions {
 
@@ -2361,17 +2355,11 @@ footer {
 
 
 
-      #nav::before {
+    #nav::before {
 
-          width: 30%;
+        width: 30%;
 
-      }
-
-      #nav {
-
-        display: flex;
-
-      }
+    }
 
 
 
@@ -2389,46 +2377,50 @@ footer {
     }
 
 
+    .instructionCopy {
+
+        margin: 0 .5rem;
+
+    }
 
 
-      .instructionCopy {
-          margin: 0 .5rem;
-      }
+    .steps {
 
+        padding: 1rem;
 
-      .steps {
-          padding: 1rem;
-      }
-
-
-
-      #wantToTry4 {
-
-          h1 {
-              line-height: initial;            
-          }
-
-      }
+    }
 
 
 
-      #share, #learn, #subscribe {
+    #wantToTry4 {
+
+        h1 {
+            
+            line-height: initial;            
+          
+        }
+
+    }
+
+
+
+    #share, #learn, #subscribe {
 
           
-          padding: 2rem;
+        padding: 2rem;
 
-              form {
+            form {
 
-                  width: 25vw;
+                width: 25vw;
 
-              }
+            }
 
-              p {
+            p {
                   margin-top: 1rem;
                   line-height: initial;
                   padding-top: initial;
                   margin-bottom: initial;
-              }
+            }
 
               input, textarea {
 
