--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2491,4 +2491,13 @@ footer {
 
 
 
+@media only screen and (orientation: landscape) {
+
+    .navButton {
+        font-size: 1.75rem;
+    }
+
+
+}
+
 
