--- a/styles/main.css
+++ b/styles/main.css
@@ -418,8 +418,8 @@ canvas {
   grid-template-rows: repeat(3, auto); }
 
 #youStopped {
-  grid-column: 4 / 10;
-  grid-row: 4 / 8;
+  grid-column: 2 / 12;
+  grid-row: 2 / 10;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -1213,6 +1213,9 @@ footer {
       margin-bottom: 1.5rem; }
   .helpUs {
     font-size: 1.5rem; }
+  #youStopped {
+    grid-column: 4 / 10;
+    grid-row: 4 / 8; }
   #subscribe, #share, #learn {
     grid-row: 2 / 8;
     padding: 2rem; }
