--- a/styles/main.scss
+++ b/styles/main.scss
@@ -927,8 +927,8 @@ canvas {
 
 #youStopped {
 
-    grid-column: 4 / 10;
-    grid-row: 4 / 8;
+    grid-column: 2 / 12;
+    grid-row: 2 / 10;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -2240,6 +2240,13 @@ footer {
     .helpUs {
 
         font-size: 1.5rem;
+
+    }
+
+    #youStopped {
+
+        grid-column: 4 / 10;
+        grid-row: 4 / 8;
 
     }
 
