--- a/styles/main.css
+++ b/styles/main.css
@@ -190,6 +190,37 @@ a:hover {
   align-items: center;
   justify-content: center; }
 
+.success {
+  padding: 0 1rem;
+  text-align: center; }
+
+#hamburger {
+  width: 55%;
+  height: 75%;
+  padding: 0.25rem 0 0 0.5rem;
+  grid-column: 1 / 3;
+  grid-row: 1 / 3;
+  z-index: 100;
+  cursor: pointer; }
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s; }
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px); }
+
+.change .bar2 {
+  opacity: 0; }
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px); }
+
 #wantToTry4 > a:hover > i {
   color: #d0c700; }
 
@@ -207,13 +238,17 @@ a:hover {
 
 /* ////////////////   Navigation   ////////////// */
 #nav {
-  grid-column: 2 / 12;
-  grid-row: 9 / 10;
-  z-index: 50;
+  grid-column: 1 / 13;
+  grid-row: 1 / 11;
+  z-index: 90;
+  align-items: center;
+  justify-content: space-around;
   font-size: 1rem;
-  align-items: flex-end;
-  justify-content: center;
-  padding: 0.5rem 2rem; }
+  padding: 0.5rem 2rem;
+  background-color: rgba(61, 61, 61, 0.7);
+  flex-direction: column;
+  width: 100%;
+  height: 100%; }
   #nav a {
     margin: 0.4rem 0.2rem; }
 
@@ -271,6 +306,39 @@ a:hover {
   animation-timing-function: ease-out;
   animation-fill-mode: forwards;
   animation-direction: reverse; }
+
+#controls {
+  width: 100%;
+  height: 100%;
+  grid-column: 1 / 4;
+  grid-row: 6 / 10;
+  z-index: 80;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 33%); }
+
+#up {
+  width: 100%;
+  height: 100%;
+  grid-column: 2;
+  grid-row: 1; }
+
+#down {
+  width: 100%;
+  height: 100%;
+  grid-column: 2;
+  grid-row: 3; }
+
+#left {
+  width: 100%;
+  height: 100%;
+  grid-column: 1;
+  grid-row: 2; }
+
+#right {
+  width: 100%;
+  height: 100%;
+  grid-column: 3;
+  grid-row: 2; }
 
 /* /////////////   Main Content   ///////////// */
 /*   Main  */
@@ -399,7 +467,7 @@ canvas {
   background-color: rgba(61, 61, 61, 0.7); }
 
 #mainFour {
-  grid-column: 1 / 13;
+  grid-column: 3 / 11;
   grid-row: 1 / 4;
   display: flex;
   flex-direction: column;
@@ -418,8 +486,8 @@ canvas {
   grid-template-rows: repeat(3, auto); }
 
 #youStopped {
-  grid-column: 4 / 10;
-  grid-row: 3 / 9;
+  grid-column: 8 / 12;
+  grid-row: 4 / 10;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -451,32 +519,18 @@ canvas {
   height: 100%;
   z-index: 30; }
 
-#info {
-  grid-column: 12 / 13;
-  grid-row: 1 / 2;
-  width: 100%;
-  height: 100%;
+#info, #closeInstruct {
+  grid-column: 11 / 13;
+  grid-row: 1 / 3;
+  width: 95%;
+  height: 64%;
   z-index: 60;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   color: white;
   transition: color 0.3s ease-out; }
 
-#info:hover {
-  color: #d0c700; }
-
-#closeInstruct {
-  grid-column: 12 / 13;
-  grid-row: 1 / 2;
-  width: 100%;
-  height: 100%;
-  z-index: 60;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  transition: color 0.3s ease-out; }
-
-#closeInstruct:hover {
+#info:hover, #closeInstruct:hover {
   color: #d0c700; }
 
 #introTextSm {
@@ -814,22 +868,26 @@ footer {
 
 #share {
   grid-column: 5 / 9;
-  grid-row: 1 / 8; }
+  grid-row: 2 / 8; }
 
 #subscribe {
   grid-column: 9 / 13;
-  grid-row: 1 / 8; }
+  grid-row: 2 / 8; }
 
 #learn {
   grid-column: 1 / 5;
-  grid-row: 1 / 8; }
+  grid-row: 2 / 8; }
 
 #subscribe form, #learn form {
   width: 100%;
   text-align: left; }
 
 #subscribe a, #learn a {
+  color: white;
   display: block; }
+
+#subscribe a:hover, #learn a:hover {
+  color: #226d8d; }
 
 #subscribe input, #learn input {
   height: 7vh;
@@ -886,11 +944,11 @@ footer {
   padding: 5px 10px;
   cursor: pointer;
   font-weight: bold;
-  color: #226d8d;
+  color: white;
   transition: all 0.3s ease-out; }
   .st-custom-button[data-network]:hover, .st-custom-button[data-network]:focus {
     text-decoration: none;
-    color: white;
+    color: #226d8d;
     background-color: none; }
 
 #sorry {
@@ -1019,7 +1077,6 @@ footer {
   animation-name: fadeInTwo;
   animation-duration: 1.5s;
   animation-timing-function: ease-out;
-  animation-delay: 0.1s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards; }
 
@@ -1028,7 +1085,6 @@ footer {
   animation-name: fadeInTwo;
   animation-duration: 1.625s;
   animation-timing-function: ease-out;
-  animation-delay: 0.1s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards; }
 
@@ -1237,7 +1293,13 @@ footer {
     font-size: 1rem;
     height: 5vh; }
   #sorry textarea {
-    font-size: 1rem; } }
+    font-size: 1rem; }
+  #nav {
+    grid-column: 2 / 12;
+    grid-row: 9 / 10;
+    z-index: 50;
+    align-items: flex-end;
+    justify-content: center; } }
 
 @media only screen and (min-width: 1025px) and (orientation: landscape) {
   body {
