--- a/styles/main.scss
+++ b/styles/main.scss
@@ -332,6 +332,52 @@ button {
 
     }
 
+    .success {
+        padding: 0 1rem;
+        text-align: center;
+    }
+
+    #hamburger {
+
+        width: 55%; 
+        height: 75%;
+        padding: 0.25rem 0 0 0.5rem;
+        grid-column: 1 / 3; 
+        grid-row: 1 / 3; 
+        z-index: 100; 
+        cursor: pointer;
+
+    }
+
+    .bar1, .bar2, .bar3 {
+
+        width: 35px; 
+        height: 5px; 
+        background-color: white; 
+        margin: 6px 0;
+        transition: 0.4s;
+
+    }
+
+
+    
+    .change .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+        transform: rotate(-45deg) translate(-9px, 6px) ;
+    }
+
+    
+    .change .bar2 {
+        opacity: 0;
+    }
+
+    
+    .change .bar3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+        transform: rotate(45deg) translate(-8px, -8px) ;
+    }
+
+
     #wantToTry4 > a:hover > i {
 
         color: $brandYellow;
@@ -372,23 +418,29 @@ button {
 
   #nav {
 
-    grid-column: 2 / 12;
-    grid-row: 9 / 10; 
-    z-index: 50; 
+    grid-column: 1 / 13; 
+    grid-row: 1 / 11; 
+    z-index: 90; 
+    align-items: center; 
+    justify-content: space-around; 
+
+
     font-size: 1rem;
-
-    align-items: flex-end;
-    justify-content: center;
-
     padding: 0.5rem 2rem;
+
+    background-color: rgba(61, 61, 61, 0.7); 
+    flex-direction: column;
+    width: 100%; 
+    height: 100%;
 
     a {
         margin: 0.4rem 0.2rem;
     }
 
 
-
   }
+
+
 
 
   .navButton {
@@ -469,8 +521,45 @@ button {
 
 
 
+#controls {
 
+    width: 100%;
+    height: 100%;
+    grid-column: 1 / 4;
+    grid-row: 6 / 10;
+    z-index: 80;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 33%);
 
+}
+
+#up {
+    width: 100%; 
+    height: 100%; 
+    grid-column: 2; 
+    grid-row: 1;
+}
+
+#down {
+    width: 100%; 
+    height: 100%; 
+    grid-column: 2; 
+    grid-row: 3;
+}
+
+#left {
+    width: 100%; 
+    height: 100%; 
+    grid-column: 1; 
+    grid-row: 2;
+}
+
+#right {
+    width: 100%; 
+    height: 100%; 
+    grid-column: 3; 
+    grid-row: 2;
+}
 
 
 
@@ -901,7 +990,7 @@ canvas {
 
 #mainFour {
 
-    grid-column: 1 / 13;
+    grid-column: 3 / 11;
     grid-row: 1 / 4;
     display: flex;
     flex-direction: column;
@@ -927,8 +1016,8 @@ canvas {
 
 #youStopped {
 
-    grid-column: 4 / 10;
-    grid-row: 3 / 9;
+    grid-column: 8 / 12;
+    grid-row: 4 / 10;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -978,45 +1067,27 @@ canvas {
 }
 
 
-#info {
+#info, #closeInstruct  {
 
-    grid-column: 12 / 13; 
-    grid-row: 1 / 2;  
-    width: 100%; 
-    height: 100%; 
+    grid-column: 11 / 13; 
+    grid-row: 1 / 3;  
+    width: 95%;
+    height: 64%; 
     z-index: 60;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     color: white;
     transition: color 0.3s ease-out;
 
 }
 
-#info:hover {
+#info:hover, #closeInstruct:hover  {
 
     color: $brandYellow;
     
 }
 
-#closeInstruct {
 
-    grid-column: 12 / 13;
-    grid-row: 1 / 2;   
-    width: 100%;
-    height: 100%;
-    z-index: 60;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    transition: color 0.3s ease-out;
-
-}
-
-#closeInstruct:hover {
-
-    color: $brandYellow;
-    
-}
 
 
 #introTextSm {
@@ -1528,7 +1599,7 @@ footer {
 
 
 
-  #share, #learn, #subscribe {
+#share, #learn, #subscribe {
 
 
     flex-direction: column;
@@ -1536,29 +1607,29 @@ footer {
     justify-content: center;
 
 
-      position: relative;
-      padding: 0.5rem;
-      z-index: 20;
+    position: relative;
+    padding: 0.5rem;
+    z-index: 20;
 
-      text-align: center;
+    text-align: center;
 
-      hr {
+    hr {
 
           border-style: solid;
           border-color: black;
           width: 5vw;
           margin: 0 auto;
 
-      }
+    }
 
-      p {
+    p {
           line-height: 0.9rem;
           margin-top: 0;
           padding-top: .5rem;
           margin-bottom: .25rem;
-      }
+    }
 
-  }
+}
 
 
 
@@ -1580,19 +1651,19 @@ footer {
   #share {
 
       grid-column: 5 / 9;
-      grid-row: 1 / 8;
+      grid-row: 2 / 8;
   }
 
   #subscribe {
 
       grid-column: 9 / 13;
-      grid-row: 1 / 8;
+      grid-row: 2 / 8;
   }
 
   #learn {
 
       grid-column: 1 / 5;
-      grid-row: 1 / 8;
+      grid-row: 2 / 8;
   }
 
 
@@ -1612,7 +1683,14 @@ footer {
 
       a {
 
-          display: block;
+        color: white;
+        display: block;
+
+      }
+
+      a:hover {
+
+        color: $brandBlue;
 
       }
 
@@ -1701,12 +1779,12 @@ footer {
      padding: 5px 10px;
      cursor: pointer;
      font-weight: bold;
-     color: $brandBlue;
+     color: white;
      transition: all 0.3s ease-out;
      
      &:hover, &:focus {
         text-decoration: none;
-        color: white;
+        color: $brandBlue;
         background-color: none;
      }
   }
@@ -1884,7 +1962,6 @@ footer {
       animation-name: fadeInTwo;
       animation-duration: 1.5s;
       animation-timing-function: ease-out;
-      animation-delay: 0.1s;
       animation-iteration-count: 1;
       animation-fill-mode: forwards;
 
@@ -1897,7 +1974,6 @@ footer {
       animation-name: fadeInTwo;
       animation-duration: 1.625s;
       animation-timing-function: ease-out;
-      animation-delay: 0.1s;
       animation-iteration-count: 1;
       animation-fill-mode: forwards;
 
@@ -2298,6 +2374,17 @@ footer {
               font-size: 1rem;
           }
       }
+
+
+        #nav {
+
+            grid-column: 2 / 12;
+            grid-row: 9 / 10; 
+            z-index: 50; 
+            align-items: flex-end;
+            justify-content: center;
+
+        }
 
 
 
