--- a/styles/main.css
+++ b/styles/main.css
@@ -1169,13 +1169,13 @@ footer {
 @media only screen and (max-width: 1024px) and (orientation: portrait) {
   #goLandscape {
     grid-column: 1 / 13;
-    grid-row: 1 / 10;
+    grid-row: 1 / 11;
     background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    z-index: 60; }
+    z-index: 110; }
     #goLandscape h1 {
       color: black;
       text-align: center;
@@ -1194,113 +1194,236 @@ footer {
     line-height: 1.15rem; } }
 
 @media only screen and (min-width: 1000px) and (orientation: landscape) {
-  button {
-    padding: 0.5rem 5rem; }
-  /* ////////////////   Navigation   ////////////// */
-  .navButton {
-    width: 100%;
-    height: 7.1vh;
-    font-size: 1.25rem;
-    padding: 0.5rem 2rem;
-    margin: 0 .25rem; }
+  #introTextSm {
+    font-size: 3rem; }
+  #introTextLg {
+    font-size: 7rem;
+    margin: -3rem 0; }
+  #info, #closeInstruct {
+    width: 88%;
+    height: 41%; }
   .h1Instructions {
-    font-size: 5rem;
-    margin-bottom: inherit; }
-  #stepsContent {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-around;
-    width: 100%;
-    margin: 5vh 0; }
-  .stepsStyle {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: column;
-    width: 15vw;
-    min-height: 51vh;
-    background-color: #d0c287;
-    color: #3c3634;
-    border-radius: 30px; }
-    .stepsStyle img {
-      width: 120%;
-      margin-left: 20px; }
-    .stepsStyle h3 {
-      padding-top: 1rem; }
-    .stepsStyle p {
-      padding: 1rem;
-      padding-top: 0;
-      text-align: center; }
-  .insDiv {
-    background-color: #d0c287;
-    color: #3c3634;
-    border-radius: 25px;
-    margin-left: -20px;
-    width: 55%;
-    padding-left: 2rem;
-    height: 5rem;
-    padding-top: 1.25rem; }
-    .insDiv p {
-      margin-left: 40px;
-      margin-top: 0.75rem; }
-  /* Photo of intersection */
-  #intersection {
-    width: 100%;
-    object-fit: cover;
-    height: 100vh; }
-  #logo {
-    -ms-grid-column: 5;
-    -ms-grid-column-span: 4;
-    grid-column: 5 / 9;
-    margin-top: 2rem; }
-  #wantToTry4 {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 0 7rem; }
-    #wantToTry4 h1 {
-      margin-top: initial;
-      font-size: initial;
-      line-height: 2.25rem; }
-    #wantToTry4 h4 {
-      font-size: initial;
-      margin-bottom: 1.5rem; }
-  .helpUs {
-    font-size: 1.5rem; }
+    font-size: 4rem; }
   #youStopped {
-    grid-column: 4 / 10;
-    grid-row: 4 / 8;
-    z-index: 30; }
-  #subscribe, #share, #learn {
-    grid-row: 2 / 8;
-    padding: 2rem; }
-  #subscribe input {
-    height: 5vh;
-    font-size: 1rem; }
-  #subscribe input[type="submit"] {
-    color: white;
-    font-weight: 600;
-    background-color: #226d8d;
-    border: 2px solid #226d8d;
-    padding: 0.5rem 2.5rem;
-    font-family: Arial, sans-serif;
-    transition: all 0.3s ease-out; }
-  .inputGroup {
-    margin: 1rem 0; }
-  #sorry input {
-    font-size: 1rem;
-    height: 5vh; }
-  #sorry textarea {
-    font-size: 1rem; }
-  #nav {
-    grid-column: 2 / 12;
-    grid-row: 9 / 10;
-    z-index: 50;
-    align-items: flex-end;
-    justify-content: center; } }
+    grid-column: 7 / 12;
+    grid-row: 6 / 10; }
+  #controls {
+    grid-row: 7 / 10; }
+  #wantToTry4 {
+    padding: 0 1rem; }
+    #wantToTry4 h1 {
+      font-size: 3rem;
+      line-height: 3rem; } }
 
+/*  @media only screen and (min-width: 1000px) and (orientation: landscape) {
+
+
+
+      button {
+
+          padding: 0.5rem 5rem;
+
+      }
+
+
+
+
+
+    .navButton {
+
+        width: 100%;
+        height: 7.1vh;
+        font-size: 1.25rem;
+        padding: 0.5rem 2rem;
+        margin: 0 .25rem;
+
+    }
+
+
+
+    .h1Instructions {
+
+        font-size: 5rem;
+        margin-bottom: inherit;
+            
+    }
+
+    #stepsContent {
+
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-around;
+        width: 100%;
+        margin: 5vh 0;
+
+    }
+
+    .stepsStyle {
+
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        flex-direction: column;
+        width: 15vw;
+        min-height: 51vh;
+        background-color: #d0c287;
+        color: #3c3634;
+        border-radius: 30px;
+
+        img {
+            width: 120%;
+            margin-left: 20px;
+        }
+
+        h3 {
+
+            padding-top: 1rem;
+
+        }
+
+        p {
+            padding: 1rem;
+            padding-top: 0;
+            text-align: center;
+        }
+
+
+    }
+
+    .insDiv {
+
+        background-color: #d0c287;
+        color: #3c3634;
+        border-radius: 25px;
+        margin-left: -20px;
+        width: 55%;
+        padding-left: 2rem;
+        height: 5rem;
+        padding-top: 1.25rem;
+
+        p {
+
+            margin-left: 40px;
+            margin-top: 0.75rem;
+
+        }
+
+
+    }
+
+
+
+
+
+      #logo {
+
+          -ms-grid-column: 5;          
+          -ms-grid-column-span: 4;          
+          grid-column: 5 / 9;
+          margin-top: 2rem;
+
+      }
+
+
+
+    #wantToTry4 {
+
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 0 7rem;
+
+        h1 {
+            margin-top: initial;
+            font-size: initial;
+            line-height: 2.25rem; 
+        }
+
+        h4 {
+            font-size: initial;
+            margin-bottom: 1.5rem;
+        }
+
+    }
+
+    .helpUs {
+
+        font-size: 1.5rem;
+
+    }
+
+    #youStopped {
+
+        grid-column: 4 / 10;
+        grid-row: 4 / 8;
+        z-index: 30;
+
+    }
+
+      #subscribe, #share, #learn {
+
+         
+          grid-row: 2 / 8;
+          padding: 2rem;
+
+
+      }
+
+      #subscribe {
+
+          input {
+              height: 5vh;
+              font-size: 1rem;
+          }
+
+          input[type="submit"] {
+
+              color: white;
+              font-weight: 600;
+              background-color: $brandBlue;
+              border: 2px solid $brandBlue;
+              padding: 0.5rem 2.5rem;
+              font-family: Arial, sans-serif;
+              transition: all 0.3s ease-out;
+              
+          }
+
+
+      }
+
+
+      .inputGroup {
+
+          margin: 1rem 0;
+
+      }
+
+      #sorry {
+          input {
+              font-size: 1rem;
+              height: 5vh;
+          }
+          textarea {
+              font-size: 1rem;
+          }
+      }
+
+
+        #nav {
+
+            grid-column: 2 / 12;
+            grid-row: 9 / 10; 
+            z-index: 50; 
+            align-items: flex-end;
+            justify-content: center;
+
+        }
+
+
+
+  }*/
 @media only screen and (min-width: 1025px) and (orientation: landscape) {
   body {
     font-size: 21px; }
@@ -1311,11 +1434,7 @@ footer {
   .fadeInT {
     margin-left: 7px; }
   #sorry {
-    -ms-grid-column: 4;
-    -ms-grid-column-span: 6;
     grid-column: 4 / 10;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 7;
     grid-row: 2 / 9; }
     #sorry input, #sorry textarea {
       font-size: 1rem;
