--- a/styles/main.scss
+++ b/styles/main.scss
@@ -422,18 +422,38 @@ button {
     flex-direction: column;
     align-items: center; 
     justify-content: center;
+    background-color: $bgNav;
     z-index: 200; 
     opacity: 1;
 
 }
 
+#aroundLoad {
+
+    width: 30vw;
+    height: 5vh;
+    background-color: $brandDarkBlue;
+    z-index: 199;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+
+
+
+}
+
 #loading {
 
-    width: 70%;
-    height: 5%;
+    width: 28vw;
+    height: 2vh;
     z-index: 201; 
     background-color: $brandYellow;
     position: relative;
+    border-radius: 15px;
+        border-width: 1px;
+    border-style: solid;
+    border-color: white;
 
 }
 
@@ -442,6 +462,7 @@ button {
     width: 0%;
     height: 100%; 
     background-color: $brandBlue;
+    border-radius: 15px;
     position: absolute;
     top: 0;
     left: 0;
@@ -2200,7 +2221,7 @@ footer {
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        z-index: 110;
+        z-index: 500;
 
 
           h1 {
