--- a/styles/main.scss
+++ b/styles/main.scss
@@ -488,6 +488,30 @@ button {
 }
 
 
+.ffNav {
+
+
+    flex-direction: row;
+    grid-column: 2 / 12;
+    grid-row: 9 / 10; 
+    align-items: flex-end;
+    justify-content: center;
+    background-color: transparent;
+
+}
+
+
+.regNav {
+
+    flex-direction: column;
+    grid-column: 1 / 13; 
+    grid-row: 1 / 11; 
+    align-items: flex-end;
+    justify-content: center;
+    background-color: $bgNav; 
+
+}
+
 
 
   /*      ///////////////   Go Landscape   ////////////     */
@@ -507,20 +531,14 @@ button {
 
   #nav {
 
-    grid-column: 1 / 13; 
-    grid-row: 1 / 11; 
+
     z-index: 90; 
-    align-items: flex-end;
-    justify-content: center;
-
-
     font-size: 1rem;
     padding: 0.5rem 2rem;
-
-    background-color: $bgNav; 
-    flex-direction: column;
     width: 100%; 
     height: 100%;
+
+
 
     a {
 
@@ -2461,221 +2479,6 @@ footer {
 
 
 
-
-/*  @media only screen and (min-width: 1000px) and (orientation: landscape) {
-
-
-
-      button {
-
-          padding: 0.5rem 5rem;
-
-      }
-
-
-
-
-
-    .navButton {
-
-        width: 100%;
-        height: 7.1vh;
-        font-size: 1.25rem;
-        padding: 0.5rem 2rem;
-        margin: 0 .25rem;
-
-    }
-
-
-
-    .h1Instructions {
-
-        font-size: 5rem;
-        margin-bottom: inherit;
-            
-    }
-
-    #stepsContent {
-
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        justify-content: space-around;
-        width: 100%;
-        margin: 5vh 0;
-
-    }
-
-    .stepsStyle {
-
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        flex-direction: column;
-        width: 15vw;
-        min-height: 51vh;
-        background-color: #d0c287;
-        color: #3c3634;
-        border-radius: 30px;
-
-        img {
-            width: 120%;
-            margin-left: 20px;
-        }
-
-        h3 {
-
-            padding-top: 1rem;
-
-        }
-
-        p {
-            padding: 1rem;
-            padding-top: 0;
-            text-align: center;
-        }
-
-
-    }
-
-    .insDiv {
-
-        background-color: #d0c287;
-        color: #3c3634;
-        border-radius: 25px;
-        margin-left: -20px;
-        width: 55%;
-        padding-left: 2rem;
-        height: 5rem;
-        padding-top: 1.25rem;
-
-        p {
-
-            margin-left: 40px;
-            margin-top: 0.75rem;
-
-        }
-
-
-    }
-
-
-
-
-
-      #logo {
-
-          -ms-grid-column: 5;          
-          -ms-grid-column-span: 4;          
-          grid-column: 5 / 9;
-          margin-top: 2rem;
-
-      }
-
-
-
-    #wantToTry4 {
-
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 0 7rem;
-
-        h1 {
-            margin-top: initial;
-            font-size: initial;
-            line-height: 2.25rem; 
-        }
-
-        h4 {
-            font-size: initial;
-            margin-bottom: 1.5rem;
-        }
-
-    }
-
-    .helpUs {
-
-        font-size: 1.5rem;
-
-    }
-
-    #youStopped {
-
-        grid-column: 4 / 10;
-        grid-row: 4 / 8;
-        z-index: 30;
-
-    }
-
-      #subscribe, #share, #learn {
-
-         
-          grid-row: 2 / 8;
-          padding: 2rem;
-
-
-      }
-
-      #subscribe {
-
-          input {
-              height: 5vh;
-              font-size: 1rem;
-          }
-
-          input[type="submit"] {
-
-              color: white;
-              font-weight: 600;
-              background-color: $brandBlue;
-              border: 2px solid $brandBlue;
-              padding: 0.5rem 2.5rem;
-              font-family: Arial, sans-serif;
-              transition: all 0.3s ease-out;
-              
-          }
-
-
-      }
-
-
-      .inputGroup {
-
-          margin: 1rem 0;
-
-      }
-
-      #sorry {
-          input {
-              font-size: 1rem;
-              height: 5vh;
-          }
-          textarea {
-              font-size: 1rem;
-          }
-      }
-
-
-        #nav {
-
-            grid-column: 2 / 12;
-            grid-row: 9 / 10; 
-            z-index: 50; 
-            align-items: flex-end;
-            justify-content: center;
-
-        }
-
-
-
-  }*/
-
-
-
-
-
 @media only screen and (min-width: 1025px) and (orientation: landscape) {
 
 
@@ -2911,11 +2714,11 @@ footer {
 
 
 
-@media only screen and (min-width: 1280px) and (hover:hover) {
+@media only screen and (min-width: 1280px) {
 
-    #nav {
+/*    #nav {
 
-        display: flex;
+
         flex-direction: row;
         grid-column: 2 / 12;
         grid-row: 9 / 10; 
@@ -2923,7 +2726,7 @@ footer {
         justify-content: center;
         background-color: transparent;
 
-    }
+    }*/
 
     .navButton {
 
